--- a/application/templates/home/layout.html
+++ b/application/templates/home/layout.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,15 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=no">
     <title>Enjoy Movies</title>
-    
-   
-    
-    
-     <!-- <link rel="stylesheet" href="{{ url_for('static',filename='base/css/bootstrap.min.css') }}">  -->
-    <!-- <link rel="stylesheet" href="{{ url_for('static',filename='base/css/bootstrap-movie.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='base/css/animate.css') }}"> 
-      -->
-    <style>
+
+    <link rel="shortcut icon" href="{{ url_for('static',filename='base/image/logo.jpeg') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static',filename='base/css/bootstrap.min.css') }}"> -->
+    <link rel="stylesheet" href="{{ url_for('static',filename='base/css/bootstrap-movie.css') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static',filename='base/css/animate.css') }}"> -->
+    <!-- <style>
         .navbar-brand>img {
             display: inline;
         }
@@ -22,84 +21,91 @@
             padding:3px;
             border:1px solid #ccc
         }
-    </style>
-    
+    </style> -->
+
 </head>
 
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-       
-        <div class="navbar-header">
-            <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="{{ url_for('home.index') }}" class="navbar-brand" style="width:250px;">
-                <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Enjoy Movies
-            </a>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+
+            <div class="navbar-header">
+                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="{{ url_for('home.index',page=1) }}" class="navbar-brand" style="width:250px;">
+                    <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Enjoy Movies
+                </a>
+            </div>
+
+            <div class="navbar-collapse collapse">
+                <form class="navbar-form navbar-left" role="search" style="margin-top:18px;">
+                    <div class="form-group input-group">
+                        <input type="text" class="form-control" placeholder="Search movie" id="key_movie">
+                        <span class="input-group-btn">
+                            <a id="do_search">Search</a>
+                        </span>
+                    </div>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="curlink" href="{{ url_for('home.index',page=1) }}">
+                            <span class="glyphicon glyphicon-film"></span>&nbsp;Movie</a>
+                    </li>
+                    <li>
+                        <a class="curlink" href="{{ url_for('home.login') }}">
+                            <span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a>
+                    </li>
+                    <li>
+                        <a class="curlink" href="{{ url_for('home.regist') }}">
+                            <span class="glyphicon glyphicon-plus"></span>&nbsp;Register</a>
+                    </li>
+                    <li>
+                        <a class="curlink" href="{{ url_for('home.login') }}">
+                            <span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a>
+                    </li>
+                    <li>
+                        <a class="curlink" href="{{ url_for('home.user') }}">
+                            <span class="glyphicon glyphicon-user"></span>&nbsp;User center</a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
-        
-        <div class="navbar-collapse collapse">
-            <form class="navbar-form navbar-left" role="search" style="margin-top:18px;">
-                <div class="form-group input-group">
-                    <input type="text" class="form-control" placeholder="Search movie">
-                    <span class="input-group-btn">
-                        <a class="btn btn-default" href="{{ url_for('home.search') }}"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</a>
-                    </span>
+    </nav>
+
+    {% block content %}{% endblock %}
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+
                 </div>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a class="curlink" href="{{ url_for('home.index') }}"><span class="glyphicon glyphicon-film"></span>&nbsp;Movie</a>
-                </li>
-                <li>
-                    <a class="curlink" href="{{ url_for('home.login') }}"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a>
-                </li>
-                <li>
-                    <a class="curlink" href="{{ url_for('home.regist') }}"><span class="glyphicon glyphicon-plus"></span>&nbsp;Register</a>
-                </li>
-                <li>
-                    <a class="curlink" href="{{ url_for('home.login') }}"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a>
-                </li>
-                <li>
-                    <a class="curlink" href="{{ url_for('home.user') }}"><span class="glyphicon glyphicon-user"></span>&nbsp;User center</a>
-                </li>
-            </ul>
-        </div>
-        
-    </div>
-</nav>
-
-{% block content %}{% endblock %}
-
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
+
+    <script src="{{ url_for('static',filename='base/js/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='base/js/bootstrap.min.js') }}"></script>
 
 
-<script>
-    $(function() {
-        new WOW().init();
-    })
 
-</script>
-<script>
-    $(document).ready(function() {
-        $("img.lazy").lazyload({
-            effect: "fadeIn"
-        });
-    });
 
-</script>
-{% block js %}{% endblock %}
+
+
+
+
+    <script>
+        $("#do_search").click(function () {
+            var key = $("#key_movie").val();
+            location.href = "{{ url_for('home.search',page=1) }}?key=" + key;
+         });
+        
+    </script> 
 </body>
+
 </html>
