--- a/application/templates/home/index.html
+++ b/application/templates/home/index.html
@@ -1,4 +1,7 @@
-{% extends "home/layout.html" %} {% block content %}
+{% extends "home/layout.html" %} 
+{% import "ui/admin_page.html" as pg %}
+{% block content %}
+
 
 
 <section id="movielist">
@@ -9,54 +12,21 @@
                     <tr>
                         <td style="width:10%;">Movie tag</td>
                         <td style="width:90%;">
-                            <a class="label label-info">
-                                <span class="glyphicon glyphicon-tag"></span>&nbsp;tag1</a>
-                            &nbsp;
-                            <a class="label label-info">
-                                <span class="glyphicon glyphicon-tag"></span>&nbsp;tag2</a>
-                            &nbsp;
-                            <a class="label label-info">
-                                <span class="glyphicon glyphicon-tag"></span>&nbsp;tag3</a>
-                            &nbsp;
-                            <a class="label label-info">
-                                <span class="glyphicon glyphicon-tag"></span>&nbsp;tag4</a>
-                            &nbsp;
-                            <a class="label label-info">
-                                <span class="glyphicon glyphicon-tag"></span>&nbsp;tag5</a>
+                            {% for v in tags %}
+                            <a href="{{ url_for('home.index',page=1) }}?tid={{ v.id }}&pm={{ p['pm'] }}&cm={{ p['cm'] }}" class="label label-info">
+                                <span class="glyphicon glyphicon-tag"></span>{{ v.name }}</a>
+                            {% endfor %}
                     </tr>
                     
-                    <tr>
-                        <td>Showing time</td>
-                        <td>
-                            <a class="label label-default">
-                                <span class="glyphicon glyphicon-time"></span>&nbsp;Recent</span>
-                            </a>
-                            &nbsp;
-                            <a class="label label-default">
-                                <span class="glyphicon glyphicon-time"></span>&nbsp;2018</span>
-                            </a>
-                            &nbsp;
-                            <a class="label label-default">
-                                <span class="glyphicon glyphicon-time"></span>&nbsp;2017</span>
-                            </a>
-                            &nbsp;
-                            <a class="label label-default">
-                                <span class="glyphicon glyphicon-time"></span>&nbsp;2016</span>
-                            </a>
-                            &nbsp;
-                            <a class="label label-default">
-                                <span class="glyphicon glyphicon-time"></span>&nbsp;Earlier</span>
-                            </a>
-                        </td>
-                    </tr>
+                    
                     <tr>
                         <td>Played</td>
                         <td>
-                            <a class="label label-success">
+                            <a href="{{ url_for('home.index',page=1) }}?tid={{ p['tid'] }}&pm=1&cm={{ p['cm'] }}" class="label label-success">
                                 <span class="glyphicon glyphicon-arrow-down"></span>&nbsp;Most first</span>
                             </a>
                             &nbsp;
-                            <a class="label label-danger">
+                            <a  href="{{ url_for('home.index',page=1) }}?tid={{ p['tid'] }}&pm=2&cm={{ p['cm'] }}" class="label label-danger">
                                 <span class="glyphicon glyphicon-arrow-up"></span>&nbsp;Least first</span>
                             </a>
                         </td>
@@ -64,67 +34,34 @@
                     <tr>
                         <td>Comment number</td>
                         <td>
-                            <a class="label label-success">
+                            <a  href="{{ url_for('home.index',page=1) }}?tid={{ p['tid'] }}&pm={{p['pm'] }}&cm=1" class="label label-success">
                                 <span class="glyphicon glyphicon-arrow-down"></span>&nbsp;Most first</span>
                             </a>
                             &nbsp;
-                            <a class="label label-danger">
+                            <a href="{{ url_for('home.index',page=1) }}?tid={{ p['tid'] }}&pm={{p['pm'] }}&cm=2" class="label label-danger">
                                 <span class="glyphicon glyphicon-arrow-up"></span>&nbsp;Least first</span>
                             </a>
                         </td>
                     </tr>
                 </table>
             </div>
-            {% for v in range(1,13) %}
+            {% for v in page_data.items %}
             <div class="col-md-3">
                 <div class="movielist text-center">
                     <!--<img data-original="holder.js/262x166"
                              class="img-responsive lazy center-block" alt="">-->
-                    <img src="holder.js/262x166" class="img-responsive center-block" alt="">
-                    <div class="text-left" style="margin-left:auto;margin-right:auto;width:210px;">
-                        <span style="color:#999;font-style: italic;">X-men</span>
-                        <br>
-                        <div>
-                            <span class="glyphicon glyphicon-star" style="color:#FFD119"></span>
-                            <span class="glyphicon glyphicon-star" style="color:#FFD119"></span>
-                            <span class="glyphicon glyphicon-star" style="color:#FFD119"></span>
-                            <span class="glyphicon glyphicon-star-empty" style="color:#FFD119"></span>
-                            <span class="glyphicon glyphicon-star-empty" style="color:#FFD119"></span>
-                        </div>
+                    
+                    <div class="text-left" style="margin-left:auto;margin-right:auto;width:110px;">
+                        <span style="color:black">{{ v.title }}</span>
+                        
                     </div>
-                    <a href="{{ url_for('home.play') }}" class="btn btn-primary" target="_blank" role="button">
+                    <a href="{{ url_for('home.play',id=v.id) }}" class="btn btn-primary" target="_blank" role="button">
                         <span class="glyphicon glyphicon-play"></span>&nbsp;Play</a>
                 </div>
             </div>
             {% endfor %}
             <div class="col-md-12">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination">
-                        <li>
-                            <a href="#" aria-label="First">
-                                <span aria-hidden="true">First page</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" aria-label="Previous">
-                                <span aria-hidden="true">Previous page</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">1&nbsp;/&nbsp;10</a>
-                        </li>
-                        <li>
-                            <a href="#" aria-label="Next">
-                                <span aria-hidden="true">Next page</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" aria-label="Last">
-                                <span aria-hidden="true">Last page</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                {{ pg.page(page_data,'home.index') }}
             </div>
         </div>
     </div>
