--- a/application/templates/home/play.html
+++ b/application/templates/home/play.html
@@ -1,14 +1,20 @@
 {% extends "home/home.html" %} {% block css %}
 <!--playing page-->
 <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='jwplayer/skins/stormtrooper.css') }}">
-<script type="text/javascript" src="{{url_for('static',filename='ueditor/ueditor.config.js') }}"></script>
-<script type="text/javascript" src="{{url_for('static',filename='ueditor/ueditor.all.js') }}"></script>
-<script type="text/javascript" src="{{url_for('static',filename='ueditor/lang/en/en.js') }}"></script>
+<script type="text/javascript" charset="UTF-8" src="{{url_for('static',filename='ue/ueditor.config.js')}}"></script>
+<script type="text/javascript" charset="UTF-8" src="{{url_for('static',filename='ue/ueditor.all.min.js')}}"></script>
+<script type="text/javascript" charset="UTF-8" src="{{url_for('static',filename='ue/lang/en/en.js')}}"></script> 
+
+
 <script>
     SyntaxHighlighter.all();
 </script>
 <!--playing page-->
-{% endblock %} {% block content %}
+
+
+{% endblock %} 
+
+{% block content %}
 <div class="row">
     <div class="col-md-8">
         <div id="moviecontainer"></div>
@@ -17,7 +23,7 @@
         <div class="panel panel-info">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                    <span class="glyphicon glyphicon-facetime-video"></span>&nbsp;Plot</h3>
+                    <span class="glyphicon glyphicon-facetime-video"></span>&nbsp;</h3>
             </div>
             <div class="panel-body" style="height:459px;">
                 <table class="table">
@@ -25,51 +31,51 @@
                         <td style="width:30%;color:#ccc;font-weight:bold;font-style:italic;">
                             <span class="glyphicon glyphicon-film"></span>&nbsp;Name
                         </td>
-                        <td>X-men</td>
+                        <td>{{ movie.title }}</td>
                     </tr>
                     <tr>
                         <td style="color:#ccc;font-weight:bold;font-style:italic;">
                             <span class="glyphicon glyphicon-tag"></span>&nbsp;Tag
                         </td>
-                        <td>Science fiction</td>
+                        <td>{{ movie.tag.name }}</td>
                     </tr>
                     <tr>
                         <td style="color:#ccc;font-weight:bold;font-style:italic;">
                             <span class="glyphicon glyphicon-time"></span>&nbsp;Length
                         </td>
-                        <td>05:04</td>
+                        <td>{{ movie.length }}</td>
                     </tr>
                     <tr>
                         <td style="color:#ccc;font-weight:bold;font-style:italic;">
                             <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Area
                         </td>
-                        <td>USA</td>
+                        <td>{{ movie.area }}</td>
                     </tr>
 
                     <tr>
                         <td style="color:#ccc;font-weight:bold;font-style:italic;">
                             <span class="glyphicon glyphicon-calendar"></span>&nbsp;Showing time
                         </td>
-                        <td>2013.7.12</td>
+                        <td>{{ movie.release_time }}</td>
                     </tr>
                     <tr>
                         <td style="color:#ccc;font-weight:bold;font-style:italic;">
                             <span class="glyphicon glyphicon-play"></span>&nbsp;Played
                         </td>
-                        <td>1000</td>
+                        <td>{{ movie.playnum }}</td>
                     </tr>
                     <tr>
                         <td style="color:#ccc;font-weight:bold;font-style:italic;">
                             <span class="glyphicon glyphicon-comment"></span>&nbsp;Comment number
                         </td>
-                        <td>1000</td>
+                        <td>{{ movie.commentnum}}</td>
                     </tr>
                     <tr>
                         <td style="color:#ccc;font-weight:bold;font-style:italic;">
                             <span class="glyphicon glyphicon-picture"></span>&nbsp;Plot
                         </td>
                         <td>
-                            Something about young X professor
+                            {{ movie.info }}
                         </td>
                     </tr>
                 </table>
@@ -177,42 +183,47 @@
 </div>
 {% endblock %} {% block js %}
 <!--playing page-->
-<script src="{{url_for('static',filename='jwplayer/jwplayer.js') }}"></script>
+<script src="{{ url_for('static',filename='jwplayer/jwplayer.js') }}"></script>
 <script>
-    var ue = UE.getEditor('input_content', {
-        toolbars: [
-            ['fullscreen', 'emotion', 'preview', 'link']
-        ],
-        initialFrameWidth: "100%",
-        initialFrameHeight: "100",
-    });
+var ue = UE.getEditor('input_content',{
+    toolbars: [
+        ['fullscreen', 'emotion', 'preview', 'link']
+    ],
+    initialFrameWidth:"100%",
+    initialFrameHeight:"100",
+});
+
 </script>
 <script type="text/javascript">
-    jwplayer.key = "P9VTqT/X6TSP4gi/hy1wy23BivBhjdzVjMeOaQ==";
+	jwplayer.key = "P9VTqT/X6TSP4gi/hy1wy23BivBhjdzVjMeOaQ==";
+
 </script>
 <script type="text/javascript">
-    jwplayer("moviecontainer").setup({
-        flashplayer: "{{url_for('static',filename='jwplayer/jwplayer.flash.swf') }}",
-        playlist: [{
-            file: "{{url_for('static',filename='video/videoplayback.mp4') }}",
-            title: "x-men"
-        }],
-        modes: [{
-            type: "html5"
-        }, {
-            type: "flash",
-            src: "{{url_for('static',filename='jwplayer/jwplayer.flash.swf') }}"
-        }, {
-            type: "download"
-        }],
-        skin: {
-            name: "vapor"
-        },
-        "playlist.position": "left",
-        "playlist.size": 400,
-        height: 500,
-        width: 774,
-    });
+	jwplayer("moviecontainer").setup({
+		flashplayer: "{{ url_for('static',filename='jwplayer/jwplayer.flash.swf') }}",
+		playlist: [{
+			file: "{{ url_for('static',filename='uploads/'+movie.url) }}",
+			title: "{{ movie.title }}"
+		}],
+		modes: [{
+			type: "html5"
+		}, {
+			type: "flash",
+			src: "{{ url_for('static',filename='jwplayer/jwplayer.flash.swf') }}"
+		}, {
+			type: "download"
+		}],
+		skin: {
+			name: "vapor"
+		},
+		"playlist.position": "left",
+		"playlist.size": 400,
+		height: 500,
+		width: 774,
+	});
+
 </script>
+
+
 <!--playing page-->
 {% endblock %}
