--- a/application/templates/admin/admin.html
+++ b/application/templates/admin/admin.html
@@ -1,107 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <title>Administration</title>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- <link rel="shortcut icon" href="../static/base/images/logo.png">
-    <link rel="stylesheet" href="../static/admin/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/fonts/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="../static/admin/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="../static/admin/dist/css/skins/_all-skins.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/admin/plugins/datepicker/datepicker3.css"> -->
-    <style>
-        * {
-            font-family: "Microsoft YaHei";
-        }
-
-        .table>tbody>tr>td,
-        .table>tbody>tr>th,
-        .table>tfoot>tr>td,
-        .table>tfoot>tr>th,
-        .table>thead>tr>td,
-        .table>thead>tr>th {
-            vertical-align: middle;
-            text-align: center;
-        }
-    </style>
-    {% block css%}{% endblock %}
+    {% block css %}{% endblock %}
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
-    <div class="wrapper">
-        <header class="main-header">
-            <a href="{{ url_for('admin.index') }}" class="logo">
-                <!-- <span class="logo-mini">
-                    <img src="{{ url_for('static', filename='base/image/logo.jpeg') }}" style="height:40px;width:40px;">Movie system</span> -->
-                <span class="logo-lg">
-                    <img src="{{ url_for('static', filename='base/image/logo.jpeg') }}" style="height:40px;width:40px;">Administration</span>
-            </a>
-            <nav class="navbar navbar-static-top">
-                <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                    <span class="sr-only">Menu</span>
-                </a>
-                <div class="navbar-custom-menu">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown user user-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <!-- <img src="../static/admin/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
-                                <span class="hidden-xs">xxx</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="user-header">
-                                    <!-- <img src="../static/admin/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"> -->
-                                    <p>
-                                        xxx
-                                        <small>2017-06-01</small>
-                                    </p>
-                                </li>
-                                <li class="user-footer">
-                                    <div class="pull-left">
-                                        <a href="{{ url_for('admin.pwd') }}" class="btn btn-default btn-flat">Change password</a>
-                                    </div>
-                                    <div class="pull-right">
-                                        <a href="{{ url_for('admin.logout') }}" class="btn btn-default btn-flat">Logout</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <aside class="main-sidebar">
-            <section class="sidebar">
-                <div class="user-panel">
+<body>
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+        <div class="container">
+            <a class="navbar-brand">Administration </a>
 
-                </div>
-
-                {% include "admin/grid.html" %}
-            </section>
-        </aside>
-        <div class="content-wrapper">
-
-            {% block content%}{% endblock %}
-
+            <a class="btn btn-outline-danger" href="{{ url_for('admin.logout') }}">{{ session['admin']}} -> Logout</a>
+            <a class="btn btn-outline-danger" href="{{ url_for('admin.pwd') }}">Change password</a>
         </div>
-
-
+    </nav>
+    <div class="container" style="margin-top: 6px;">
+        <div class="row">
+            
+            <div class="col-mid-3">
+                {% include "admin/grid.html" %}
+            </div>
+            <div class="col-mid-6">
+                <div class="card-header">{{ title }}</div>
+                <div class="card-body">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
+        </div>
     </div>
-    <!-- <script src="../static/admin/plugins/jQuery/jQuery-2.2.0.min.js"></script>
-    <script src="../static/admin/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../static/admin/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-    <script src="../static/admin/plugins/fastclick/fastclick.js"></script>
-    <script src="../static/admin/dist/js/app.min.js"></script>
-    <script src="../static/admin/dist/js/demo.js"></script>
-    <script src="//cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
-    <script src="../static/admin/plugins/datepicker/bootstrap-datepicker.js"></script>
-    <script src="../static/admin/plugins/datepicker/locales/bootstrap-datepicker.zh-CN.js" charset="UTF-8"></script> -->
-
-    {% block js%}{% endblock %}
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    {% block js %}{% endblock %}
 </body>
 
 </html>
