--- a/application/templates/admin/comment_list.html
+++ b/application/templates/admin/comment_list.html
@@ -1,14 +1,7 @@
-{% extends "admin/admin.html" %} {% block content %}
-<section class="content-header">
-    <h1>Administration</h1>
-    <ol class="breadcrumb">
-        <li>
-            <a href="#">
-                <i class="fa fa-dashboard"></i> Comment administration</a>
-        </li>
-        <li class="active">Comment list</li>
-    </ol>
-</section>
+{% extends "admin/admin.html" %} 
+{% import "ui/admin_page.html" as pg %}
+{% block content %}
+
 <section class="content" id="showcontent">
     <div class="row">
         <div class="col-md-12">
@@ -28,68 +21,38 @@
                     </div>
                 </div>
                 <div class="box-body box-comments">
-                    {% for v in range(1,6) %}
+                        {% for msg in get_flashed_messages(category_filter=["ok"]) %}
+                        <p class="tag_add-box-msg" style="color:green">{{ msg }}</p>
+                        {% endfor %}
+                    {% for v in page_data.items %}
                     <div class="box-comment">
                         
                         <div class="comment-text">
                             <span class="username">
-                                aleksi
+                                {{ v.user.name }} commented at
                                 <span class="text-muted pull-right">
                                     <i class="fa fa-calendar" aria-hidden="true"></i>
-                                    &nbsp; 2018-01-01 12:00:00
+                                    &nbsp; {{ v.addtime }}
                                 </span>
                             </span>
                             about movie
-                            <a>"x-men"</a>：xxx
+                            <a>{{ v.movie.title }}</a>：{{ v.content }}
                             <br>
-                            <a class="label label-danger pull-right">Delete</a>
+                            <a href="{{ url_for('admin.comment_del',id=v.id) }}" class="label label-danger pull-right">Delete</a>
                         </div>
                     </div>
                     <div class="box-comment">
                         
-                        <div class="comment-text">
-                            <span class="username">
-                                jussi
-                                <span class="text-muted pull-right">
-                                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                                    &nbsp; 2017-03-01 12:00:00
-                                </span>
-                            </span>
-                            about movie
-                            <a>"x-men</a>：xxx
-                            <br>
-                            <a class="label label-danger pull-right">Delete</a>
-                        </div>
+                        
                     </div>
                     {% endfor %}
                 </div>
                 <div class="box-footer clearfix">
-                    <ul class="pagination pagination-sm no-margin pull-right">
-                        <li>
-                            <a href="#">First page</a>
-                        </li>
-                        <li>
-                            <a href="#">Previous page</a>
-                        </li>
-                        <li>
-                            <a href="#">1</a>
-                        </li>
-                        <li>
-                            <a href="#">2</a>
-                        </li>
-                        <li>
-                            <a href="#">3</a>
-                        </li>
-                        <li>
-                            <a href="#">Next page</a>
-                        </li>
-                        <li>
-                            <a href="#">Last page</a>
-                        </li>
-                    </ul>
+                        {{ pg.page(page_data,'admin.comment_list') }}
                 </div>
             </div>
         </div>
     </div>
 </section>
 {% endblock %}
+
