--- a/application/templates/admin/grid.html
+++ b/application/templates/admin/grid.html
@@ -2,10 +2,9 @@
     <li class="header">Administration menu</li>
 
     <li class="treeview">
-        <a href="#">
-            <i class="fa fa-tags" aria-hidden="true"></i>
+        <a>
+
             <span>Tag</span>
-            <span class="label label-primary pull-right">2</span>
         </a>
         <ul class="treeview-menu">
             <li>
@@ -21,10 +20,10 @@
         </ul>
     </li>
     <li class="treeview">
-        <a href="#">
-            <i class="fa fa-file-video-o" aria-hidden="true"></i>
+        <a>
+
             <span>Movie</span>
-            <span class="label label-primary pull-right">2</span>
+
         </a>
         <ul class="treeview-menu">
             <li>
@@ -41,28 +40,28 @@
     </li>
 
     <li class="treeview">
-        <a href="#">
-            <i class="fa fa-users" aria-hidden="true"></i>
+        <a>
+
             <span>User</span>
-            <span class="label label-primary pull-right">1</span>
+
         </a>
         <ul class="treeview-menu">
             <li>
-                <a href="{{ url_for('admin.user_list') }}">
+                <a href="{{ url_for('admin.user_list',page=1) }}">
                     <i class="fa fa-circle-o"></i> User list
                 </a>
             </li>
         </ul>
     </li>
     <li class="treeview">
-        <a href="#">
-            <i class="fa fa-comments" aria-hidden="true"></i>
+        <a>
+
             <span>Comment</span>
-            <span class="label label-primary pull-right">1</span>
+
         </a>
         <ul class="treeview-menu">
             <li>
-                <a href="{{ url_for('admin.comment_list') }}">
+                <a href="{{ url_for('admin.comment_list',page=1) }}">
                     <i class="fa fa-circle-o"></i> Comment list
                 </a>
             </li>
@@ -83,14 +82,14 @@
         </ul>
     </li> -->
     <li class="treeview">
-        <a href="#">
+        <a>
             <i class="fa fa-file-text" aria-hidden="true"></i>
             <span>Log</span>
-            <span class="label label-primary pull-right">3</span>
+
         </a>
         <ul class="treeview-menu">
             <li>
-                <a href="{{ url_for('admin.oplog_list') }}">
+                <a href="{{ url_for('admin.oplog_list',page=1) }}">
                     <i class="fa fa-circle-o"></i> Operation log list
                 </a>
             </li>
