--- a/application/templates/admin/oplog_list.html
+++ b/application/templates/admin/oplog_list.html
@@ -1,14 +1,7 @@
-{% extends "admin/admin.html" %} {% block content %}
-<section class="content-header">
-    <h1>Administration</h1>
-    <ol class="breadcrumb">
-        <li>
-            <a href="#">
-                <i class="fa fa-dashboard"></i> Operation log</a>
-        </li>
-        <li class="active">Operation list</li>
-    </ol>
-</section>
+{% extends "admin/admin.html" %} 
+{% import "ui/admin_page.html" as pg %}
+{% block content %}
+
 <section class="content" id="showcontent">
     <div class="row">
         <div class="col-md-12">
@@ -37,12 +30,12 @@
                                 <th>Reason</th>
                                 
                             </tr>
-                            {% for v in range(1,11) %}
+                            {% for v in page_data.items %}
                             <tr>
-                                <td>1</td>
-                                <td>admin</td>
-                                <td>2018-06-01</td>
-                                <td>Added a tag:Science fiction</td>
+                                <td>{{ v.id }}</td>
+                                <td>{{ v.admin.name }}</td>
+                                <td>{{ v.addtime }}</td>
+                                <td>{{ v.reason }}</td>
                                 
                             </tr>
                             {% endfor %}
@@ -50,29 +43,7 @@
                     </table>
                 </div>
                 <div class="box-footer clearfix">
-                    <ul class="pagination pagination-sm no-margin pull-right">
-                        <li>
-                            <a href="#">First page</a>
-                        </li>
-                        <li>
-                            <a href="#">Previous page</a>
-                        </li>
-                        <li>
-                            <a href="#">1</a>
-                        </li>
-                        <li>
-                            <a href="#">2</a>
-                        </li>
-                        <li>
-                            <a href="#">3</a>
-                        </li>
-                        <li>
-                            <a href="#">Next page</a>
-                        </li>
-                        <li>
-                            <a href="#">Last page</a>
-                        </li>
-                    </ul>
+                        {{ pg.page(page_data,'admin.oplog_list') }}
                 </div>
             </div>
         </div>
