--- a/application/templates/admin/pwd.html
+++ b/application/templates/admin/pwd.html
@@ -17,19 +17,36 @@
                 <div class="box-header with-border">
                     <h3 class="box-title">Change password</h3>
                 </div>
-                <form role="form">
+                <form role="form" method="post">
                     <div class="box-body">
+                            {% for msg in get_flashed_messages(category_filter=["ok"]) %}
+                            <p class="tag_add-box-msg" style="color:green">{{ msg }}</p>
+                            {% endfor %}
+                            {% for msg in get_flashed_messages(category_filter=["err"]) %}
+                            <p class="tag_add-box-msg" style="color:red">{{ msg }}</p>
+                            {% endfor %}
                         <div class="form-group">
-                            <label for="input_pwd">Old password</label>
-                            <input type="password" class="form-control" id="input_pwd" placeholder="Old password">
+                            <label for="input_pwd">{{ form.old_pwd.label }}</label>
+                            {{ form.old_pwd }}
+                            {% for err in form.old_pwd.errors %}
+                            <div class="col-md-12">
+                                <font style="color:red">{{ err }}</font>
+                            </div>
+                            {% endfor %}
                         </div>
                         <div class="form-group">
-                            <label for="input_newpwd">New password</label>
-                            <input type="password" class="form-control" id="input_newpwd" placeholder="New password">
+                            <label for="input_newpwd">{{ form.new_pwd.label }}</label>
+                            {{ form.new_pwd }}
+                            {% for err in form.new_pwd.errors %}
+                            <div class="col-md-12">
+                                <font style="color:red">{{ err }}</font>
+                            </div>
+                            {% endfor %}
                         </div>
                     </div>
                     <div class="box-footer">
-                        <button type="submit" class="btn btn-primary">Change</button>
+                            {{ form.csrf_token }}
+                            {{ form.submit }}
                     </div>
                 </form>
             </div>
