--- a/application/templates/admin/user_list.html
+++ b/application/templates/admin/user_list.html
@@ -1,14 +1,8 @@
-{% extends "admin/admin.html" %} {% block content %}
-<section class="content-header">
-    <h1>Administration</h1>
-    <ol class="breadcrumb">
-        <li>
-            <a href="#">
-                <i class="fa fa-dashboard"></i> User administration</a>
-        </li>
-        <li class="active">User list</li>
-    </ol>
-</section>
+{% extends "admin/admin.html" %} 
+{% import "ui/admin_page.html" as pg %}
+
+{% block content %}
+
 <section class="content" id="showcontent">
     <div class="row">
         <div class="col-md-12">
@@ -28,6 +22,9 @@
                     </div>
                 </div>
                 <div class="box-body table-responsive no-padding">
+                        {% for msg in get_flashed_messages(category_filter=["ok"]) %}
+                        <p class="tag_add-box-msg" style="color:green">{{ msg }}</p>
+                        {% endfor %}
                     <table class="table table-hover">
                         <tbody>
                             <tr>
@@ -38,22 +35,22 @@
                                 <th>Login time</th>
                                 <th>Operation</th>
                             </tr>
-                            {% for v in range(1,11) %}
+                            {% for v in page_data.items %}
                             <tr>
-                                <td>1</td>
-                                <td>lym</td>
+                                <td>{{ v.id }}</td>
+                                <td>{{ v.name }}</td>
                                 
                                 
                                 <td>Normal/Froozen</td>
-                                <td>2017-06-01 12:00:00</td>
+                                <td>{{ v.addtime }}</td>
                                 <td>
-                                    <a class="label label-success" href="{{ url_for('admin.user_view') }}">Check</a>
+                                    <a class="label label-success" href="{{ url_for('admin.user_view',id=v.id) }}">Check</a>
                                     &nbsp;
                                     <a class="label label-info">Thaw</a>
                                     &nbsp;
                                     <a class="label label-warning">Freeze</a>
                                     &nbsp;
-                                    <a class="label label-danger">Delete</a>
+                                    <a class="label label-danger" href="{{ url_for('admin.user_del',id=v.id) }}">Delete</a>
                                 </td>
                             </tr>
                             {% endfor %}
@@ -61,29 +58,7 @@
                     </table>
                 </div>
                 <div class="box-footer clearfix">
-                    <ul class="pagination pagination-sm no-margin pull-right">
-                        <li>
-                            <a href="#">First page</a>
-                        </li>
-                        <li>
-                            <a href="#">Previous page</a>
-                        </li>
-                        <li>
-                            <a href="#">1</a>
-                        </li>
-                        <li>
-                            <a href="#">2</a>
-                        </li>
-                        <li>
-                            <a href="#">3</a>
-                        </li>
-                        <li>
-                            <a href="#">Next page</a>
-                        </li>
-                        <li>
-                            <a href="#">Last page</a>
-                        </li>
-                    </ul>
+                    {{ pg.page(page_data,'admin.user_list') }}
                 </div>
             </div>
         </div>
