--- a/application/templates/home/play.html
+++ b/application/templates/home/play.html
@@ -88,6 +88,7 @@
                         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
                     </p>
                 </video>
+                <script src="https://vjs.zencdn.net/7.0.3/video.js"></script>
             </div>
         </div>
     </div>
