--- a/application/templates/home/play.html
+++ b/application/templates/home/play.html
@@ -76,20 +76,11 @@
                     </tr>
 
                 </table>
-                <link href="https://vjs.zencdn.net/7.0.3/video-js.css" rel="stylesheet">
 
-                <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
-                <script src="http://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
-                <video id="my-video" class="video-js" controls preload="auto" width="640" height="250" datasetup="{}">
-                    <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type='video/mp4'>
-                    <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type='video/webm'>
+                <video width="320" height="240" controls>
 
-                    <p class="vjs-no-js">
-                        To view this video please enable JavaScript, and consider upgrading to a web browser that
-                        <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
-                    </p>
-                </video>
-                <script src="https://vjs.zencdn.net/7.0.3/video.js"></script>
+                    <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type="video/mp4"> Your browser does not support the audio element.
+                </video> >
             </div>
         </div>
     </div>
