--- a/application/templates/home/play.html
+++ b/application/templates/home/play.html
@@ -80,7 +80,7 @@
                 <video width="320" height="240" controls>
 
                     <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type="video/mp4"> Your browser does not support the audio element.
-                </video> >
+                </video> 
             </div>
         </div>
     </div>
