--- a/application/templates/home/play.html
+++ b/application/templates/home/play.html
@@ -77,10 +77,10 @@
 
                 </table>
 
-                <video width="320" height="240" controls>
+                <audio controls>
 
-                    <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type="video/mp4"> Your browser does not support the audio element.
-                </video> 
+                    <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type="audio/mpeg"> Your browser does not support the audio element.
+                    </audio> 
             </div>
         </div>
     </div>
