--- a/application/templates/home/search.html
+++ b/application/templates/home/search.html
@@ -14,7 +14,7 @@
             
             <div class="media-body">
                 <h4 class="media-heading">{{ v.title }}
-                    <a href="{{ url_for('home.play',id=v.id) }}" class="label label-primary pull-right">
+                    <a href="{{ url_for('home.play',id=v.id,page=1) }}" class="label label-primary pull-right">
                         <span class="glyphicon glyphicon-play"></span>Play</a>
                 </h4>
                 
