--- a/application/templates/home/comments.html
+++ b/application/templates/home/comments.html
@@ -1,81 +1,32 @@
-{% extends "home/home.html" %} {% block content %} {% include "home/menu.html" %}
+{% extends "home/home.html" %} {% import "ui/comment_page.html" as pg %} {% block content %} {% include "home/menu.html"
+%}
 <div class="col-md-9">
     <div class="panel panel-warning">
         <div class="panel-heading">
             <h3 class="panel-title">
-                <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Coments</h3>
+                <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Comments</h3>
         </div>
         <div class="panel-body">
             <ul class="commentList">
+                {% for v in page_data.items %}
+
                 <li class="item cl">
-                    <a href="user.html">
-                        <i class="avatar size-L radius">
-                            <img alt="50x50" src="holder.js/50x50" class="img-circle" style="border:1px solid #abcdef;">
-                        </i>
-                    </a>
                     <div class="comment-main">
                         <header class="comment-header">
                             <div class="comment-meta">
-                                <a class="comment-author" href="user.html">aleksi</a>
-                                commented at
-                                <time title="2016-12-07 09:12:51" datetime="2016-12-07 09:12:51">2017-03-01 09:12:51</time>
+                                <p class="comment-author">{{ v.account.name }}</p>
+                                commented:
                             </div>
                         </header>
                         <div class="comment-body">
-                            <p>hahaha</p>
+                            <p>{{ v.content }}</p>
                         </div>
                     </div>
                 </li>
-                <li class="item cl">
-                    <a href="user.html">
-                        <i class="avatar size-L radius">
-                            <img alt="50x50" src="holder.js/50x50" class="img-circle" style="border:1px solid #abcdef;">
-                        </i>
-                    </a>
-                    <div class="comment-main">
-                        <header class="comment-header">
-                            <div class="comment-meta">
-                                <a class="comment-author" href="user.html">jussi</a>
-                                commented at
-                                <time title="2016-12-07 09:12:51" datetime="2016-12-07 09:12:51">2017-03-01 09:12:51</time>
-                            </div>
-                        </header>
-                        <div class="comment-body">
-                            <p>aaaaa</p>
-                        </div>
-                    </div>
-                </li>
-                
-                
+                {% endfor %}
             </ul>
             <div class="col-md-12 text-center">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination">
-                        <li>
-                            <a href="#" aria-label="First">
-                                <span aria-hidden="true">First page</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" aria-label="Previous">
-                                <span aria-hidden="true">Previous page</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">1&nbsp;/&nbsp;10</a>
-                        </li>
-                        <li>
-                            <a href="#" aria-label="Next">
-                                <span aria-hidden="true">Next page</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" aria-label="Last">
-                                <span aria-hidden="true">Last page</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                {{ pg.page(page_data,'home.comments') }}
             </div>
         </div>
     </div>
