--- a/application/templates/home/index.html
+++ b/application/templates/home/index.html
@@ -55,7 +55,7 @@
                         <span style="color:black">{{ v.title }}</span>
                         
                     </div>
-                    <a href="{{ url_for('home.play',id=v.id) }}" class="btn btn-primary" target="_blank" role="button">
+                    <a href="{{ url_for('home.play',id=v.id,page=1) }}" class="btn btn-primary" target="_blank" role="button">
                         <span class="glyphicon glyphicon-play"></span>&nbsp;Play</a>
                 </div>
             </div>
