--- a/application/templates/home/menu.html
+++ b/application/templates/home/menu.html
@@ -6,12 +6,9 @@
         <a href="{{ url_for('home.pwd') }}" class="list-group-item">
             <span class="glyphicon glyphicon-lock"></span>&nbsp;Change password
         </a>
-        <a href="{{ url_for('home.comments') }}" class="list-group-item">
+        <a href="{{ url_for('home.comments',page=1) }}" class="list-group-item">
             <span class="glyphicon glyphicon-comment"></span>&nbsp;Comments history
         </a>
 
-        <a href="{{ url_for('home.moviecol') }}" class="list-group-item">
-            <span class="glyphicon glyphicon-heart"></span>&nbsp;Movies collection
-        </a>
     </div>
 </div>
